add a set of blacklisted words that will softmute a single message

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,3 +5,9 @@ soft-muted-players:
 # They will normally be able to talk unless they are actively softmuted
 overnight-soft-mutes:
   - 'chobanifreedom'
+
+# Blacklisted words that will autosoftmute a single message
+blacklisted-words:
+  - notch
+  - mojang
+  - microsoft
